--- a/supervisor1/package.json
+++ b/supervisor1/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "chalk": "^2.3.1",
-    "cross-spawn": "^6.0.4"
+    "cross-spawn": "^6.0.4",
+    "detect-port-alt": "^1.1.5",
+    "is-root": "^1.0.0"
   }
 }
